syntax = "proto3";
package message;
option go_package="/message";

message OrderRequest{
  string orderId = 1;
  int64  timeStamp = 2;
}

message OrderInfo{
  string OrderId = 1;
  string OrderName = 2;
  string OrderStatus = 3;
}

service OrderService{
  rpc GetOrderInfo(OrderRequest) returns (OrderInfo);
}
